# magento2-static-deploy-rust

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  build-all.sh
.specify/memory/: constitution.md
benches/: deploy_benchmark.rs
research-docs/: magento2-static-deploy-go-review.md
specs/001-rust-port/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-port/checklists/: requirements.md
specs/001-rust-port/contracts/: cli-interface.md
specs/002-rust-optimizations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rust-optimizations/checklists/: requirements.md
specs/002-rust-optimizations/contracts/: cli-interface.md
src/: config.rs  copier.rs  deployer.rs  error.rs  lib.rs  main.rs  scanner.rs  theme.rs
